[package]
name = "rtdetr_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { version = "2.0.0-rc.6", features = ["load-dynamic"] }
ndarray = "0.16"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.25"
show-image = { version = "0.14", features = [ "image", "raqote" ] }
raqote = { version = "0.8", default-features = false }
ureq = "2.1"
tracing = "0.1"

[features]
load-dynamic = [ "ort/load-dynamic" ]
# cuda = [ "ort/cuda" ]
